Changelog
=========

1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2014-06-12)
------------------

- Remove unused Page and Paragraph from onegovedu_workflow_policy
  [elioschmutz]


1.0 (2014-06-12)
----------------

- Init release