@@ -27,6 +27,8 @@
 
      <include file="inflator.zcml" />
      <include file="lawgiver.zcml" />
+     <include package=".viewlets" />
+     <include package=".upgrades" />
 
     <genericsetup:importStep
         name="onegov.edu"
