@@ -1,0 +1,6 @@
+from zope.interface import Interface
+
+
+class IOneGovEduLayer(Interface):
+    """Browser layer for OnegovEdu
+    """
