@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1000</version>
+  <version>1001</version>
     <dependencies>
       <dependency>profile-ftw.contentpage:default</dependency>
       <dependency>profile-ftw.calendar:default</dependency>
