@@ -1,0 +1,17 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
+    i18n_domain="onegov.edu">
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <upgrade-step:importProfile
+        title="add browserlayer"
+        profile="onegov.edu:default"
+        source="1000"
+        destination="1001"
+        directory="profiles/1001"
+        />
+
+</configure>
