@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<layers>
+    <layer name="onegov.edu.layer" 
+           interface="onegov.edu.interfaces.IOneGovEduLayer" />
+</layers>
