@@ -1,0 +1,13 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    i18n_domain="onegov.edu">
+
+    <browser:viewlet
+        name="egov.ie10mode"
+        manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+        class=".ie10mode.IE10Mode"
+        permission="zope2.View"
+        layer="onegov.edu.interfaces.IOneGovEduLayer"
+        />
+</configure>
