@@ -1,0 +1,1 @@
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
