@@ -4,7 +4,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add Viewlet to push ie11 into ie10 mode.
+  [tschanzt]
 
 
 1.0.1 (2014-06-12)
